# inf3-lab-2

./: .gitignore  CMakeLists.txt  README.md
PATypes/: CMakeLists.txt
PATypes/include/PATypes/: BinTree.h  ComplexHack.h  Deque.h  DynamicArray.h  ICollection.h  IEnumerable.h  IEnumerator.h  LazySequence.h  LinkedList.h  Map.h  MapWhere.h  PairTuple.h  Queue.h  SegmentedList.h  Sequence.h  Set.h  Stack.h  TuringMachine.h
contrib/: genData.py
include/: DynamicArray.h  Filemap.h  Filesystem.h  SHA256.h
